--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.2.1",
+    "@sanity/vision": "^3.74.1",
+    "next": "15.1.6",
+    "next-sanity": "^9.8.54",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "sanity": "^3.74.1"
   },
   "devDependencies": {
     "typescript": "^5",
